--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-1.12.0.js"></script>
+  <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/scripts.js"></script>
   <title>MY APP</title>
 </head>
@@ -24,7 +24,7 @@
             <p>Github Username:<br> Grantone<br>Level 2 Test for:</p>
             "Ping-Pong"
             <h3>Game Description</h3>
-            <p>This game identifys how quick your <br>ain can calculate and execute mathematical <br>issues so fast and so quick.</p>
+            <p>This game identifys how quick your <br>brain can calculate and execute mathematical <br>issues so fast and so quick.</p>
           </div>
           <ul>
             <li>Numbers divibles by 3 "ping"</li>
@@ -34,11 +34,11 @@
         </div>
       </div>
       <div class="col-md-6">
-        <button type="submit" class="btn">Find out!</button>
         <h3>Begin The Game</h3>
         <div class="form-group">
           <label for="Number">Enter Number:</label>
           <input id="number" type="text">
+          <button type="submit" class="btn">Find out!</button>
         </div>
       </div>
   </div>
@@ -46,7 +46,12 @@
   </div>
   </div>
   </div>
+  <div class="row row-col-md-12">
+    <div id="outputlist">
 
+    </div>
+
+  </div>
 
 
 </body>
