changes added in index.html and in js contents

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <form id="ping-pong">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col col-md-6">
           <div class="sidebar">
             <h2>Created by:Granton Mchana</h2>
             <p>Github Username:<br> Grantone<br>Level 2 Test for:</p>
@@ -26,11 +26,14 @@
             <h3>Game Description</h3>
             <p>This game identifys how quick your <br>brain can calculate and execute mathematical <br>issues so fast and so quick.</p>
           </div>
-          <ul>
-            <li>Numbers divibles by 3 "ping"</li>
-            <li>Numbers divisible by 5 "pong"</li>
-            <li>Numbers divisible by 3 and 5 "pingpong"</li>
-          </ul>
+          <div class="col col-md-6">
+            <h4>rules</h4>
+            <ul>
+              <li>Numbers divibles by 3 "ping"</li>
+              <li>Numbers divisible by 5 "pong"</li>
+              <li>Numbers divisible by 3 and 5 "pingpong"</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="col-md-6">
@@ -48,7 +51,9 @@
   </div>
   <div class="row row-col-md-12">
     <div id="outputlist">
+      <ul id="waaa">
 
+      </ul>
     </div>
 
   </div>
